# CppTraining

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt  README.md
scripts/: configure.sh  run_coverage.sh
src/: CMakeLists.txt
src/common/: CMakeLists.txt
src/common/include/: bar.h  default_equality.h  default_growth_policy.h  default_increment.h  foo.h  literal_operators.h
src/common/src/: foo.cpp
src/common/tests/: CMakeLists.txt  foo_test.cpp
src/lesson_0/: CMakeLists.txt  README.md  instructors_notes.md
src/lesson_0/include/: vector.h  vector.inl
src/lesson_0/tests/: CMakeLists.txt  vector_test.cpp
src/lesson_1/: CMakeLists.txt  README.md  instructors_notes.md
src/lesson_1/include/: propogating_allocator.h  throwing_copy.h  vector.h  vector.inl
src/lesson_1/tests/: CMakeLists.txt  vector_test.cpp
